src/GeositeFramework/css/app.css
/* ... */
/* -----------------------------------------
   Media Queries
----------------------------------------- */

@media all and (max-width: 720px) {
    .top-bar ul > li.name {
        background: transparent;
    }
    .top-bar ul > li.divider {
        border-top: none;
        border-bottom: 1px solid white;
        border-bottom: 1px solid rgba(255,255,255,0.5);
    }
}

@media all and (max-height: 768px) {
    .content .sidebar ul.side-nav.bottom > li a.hide-for-tablet {
        max-height: 38px;
        min-height: 38px;
        }
        .content .sidebar ul.side-nav.bottom > li a.hide-for-tablet .icon {
            display: none;
        }
    .content .legend {
        max-height: 550px;
    }
}

/* -----------------------------------------
   Export Window
----------------------------------------- */
.export-ui .row {
    width: 100%;
    min-width: 100%;
}

.export-output-area {
    margin-top: 10px;
}

.export-indicator {
    display: none;
    float: right;
    padding-right: 20px;
}


/* TinyBox overrides */
.tbox{
    top: 100px!important;
    min-width: 500px!important;
    width: 60%!important;
}

.tinner {
    overflow: hidden;
    padding: 0!important;
    min-height: 320px;
    width: 100%!important;
}

.tinner .tclose{
    color: #ffffff;
    opacity: 0.8;
    background: transparent;
}

.tinner .tclose:hover{
    color: #ffffff;
    opacity: 1;
}

.popover, .tcontent, .popover-content{
    height: 100%;
}

.popover-header{
    background-color: #606060;
    width: 100%;
    padding: 16px;
    height: 50px;
}

.popover h2{
    font-size: 16px;
    color: #ffffff;
    margin: 0!important;
    text-transform: uppercase;
}

.popover h3{
    color: #444;
    font-size: 16px;
}

.popover .popover-content{
    position: relative;
    width: 100%;
    padding: 14px 0;
    overflow-y: auto;
    height: 90%;
}
.popover .row{
    width: 100%;
    min-width: 100%;
    padding: 8px 16px;
}

#launchpad {
    height: 80%!important;
}

.launchpad{
    width: 100%;
    height: 100%;
}

.launchpad .row .well{
    background-color: #e9eaea;
    border-radius: 6px;
    padding: 14px;
}

.launchpad .well .description{
    width: 100%;
    display: inline-block;
}

.launchpad .well .description p{
    font-size: 14px;
    line-height: 1.2;
}

.launchpad .well .description h3{
    font-size: 18px;
    line-height: 15px;
    color: #333333;
}

.launchpad .well .thumbs{
    width: 100%;
    display: inline-block;
}

.launchpad .well ul{
    margin: 0;
    padding: 0;
    white-space: nowrap;
    width: 100%;
    height: 100%;
    overflow-x: auto;
    overflow-y: hidden;
}

.launchpad .well ul li{
    display: inline-block;
    width: 120px;
    height: 120px;
    background-color: #ffffff;
    border: solid 1px #aaaaaa;
    color: #444444;
    padding: 10px;
    border-radius: 6px;
    white-space: normal;
    vertical-align: top;
    margin-right: 4px;
    cursor: pointer;
    font-size: 12px;
    line-height: 1;
    text-align: center;
    transition: background-color 0.3s ease-out;
}

.launchpad .well ul li i{
    color: #41a3a8;
}

.launchpad .well ul li:hover{
    background-color: #41a3a8;
    border: solid 1px #41a3a8;
    color: #ffffff;
}

.launchpad .well ul li:hover i{
    color: #ffffff;
}

.launchpad ul li i{
    display: block;
    padding: 16px;
    font-size: 24px;
    text-align: center;
}

.launchpad ul li label{
    display: block;
    font-size: 12px;
    text-align: center;
}

/*Launchpad Media Queries*/

@media(min-width: 960px){
    .launchpad .well .description{
        width: 28%;
        vertical-align: top;
    }
    .launchpad .well .thumbs{
        width: 68%;
        margin-left: 2%;
    }
}

.tinner iframe {
    width: 100%;
    height: 400px;
    margin-top: 15px;
}

.export-ui .row .left-col { float: left; width: 60%; }
.export-ui .row .right-col { float: right; }
.export-ui .row p { margin: 0; }

/* -----------------------------------------
    Help Overlay overrides
--------------------------------------------*/
body #tlyPageGuideWrapper #tlyPageGuideMessages {
    top: 300px;
    margin: 0 5% 0 27%;
    width: 50%;
    max-height: 200px;
}
body #tlyPageGuideWrapper #tlyPageGuide li {
    background: #0a0a0a;
    background: rgba(10, 10, 10, 0.4);
}
body #tlyPageGuideWrapper #tlyPageGuide li.tlypageguide_right:after,
body #tlyPageGuideWrapper #tlyPageGuide li.tlypageguide_bottom:after,
body #tlyPageGuideWrapper #tlyPageGuide li.tlypageguide_left:after {
    border-top: 15px solid #0a0a0a;
    border-top: 15px solid rgba(10, 10, 10, 0.4);
}
/* -----------------------------------------
   IE8 Style Overrides
----------------------------------------- */

.lt-ie9 {
    
}

/* ----------------------------------------
    Permalink dialog
------------------------------------------ */
#long-permalink-textbox {
    display: none;
}
/* ----------------------------------------
    Subregions
------------------------------------------- */
.subregion-tooltip.esriPopup .titlePane, .subregion-tooltip.esriPopup .actionsPane { 
    display: none;
}

.subregion-tooltip.esriPopup .content, .subregion-tooltip.esriPopup .contentPane {
    display: block;
    color: #fff !important;
    background-color: #444 !important;
    font-family: 'Archivo Narrow', 'Arial Narrow', Arial, Helvetica, sans-serif;
    border-bottom: none !important;
    border-radius: 12px;
    width: 100px;
}

.subregion-tooltip.esriPopup .esriPopupWrapper {
    border-radius: 12px;
    width: 100px;
}

.subregion-tooltip.esriPopup .pointer {
    background-color: #444;
}

.subregion-header {
    z-index: 10;
    width: 100%;
    position: absolute;
    height: 50px;
    background-color: rgba(194, 32, 32, 0.5);
}
    .subregion-header p {
        color: #fff;
        opacity: 1.0;
        padding: 15px;
        display: inline-block;
    }

    .subregion-header .leave {
        float: right;
        width: 200px;
    }

        .subregion-header .leave i {
          padding-right: 5px;
        }
/* ... */

